# skyrim_box

./: .gitignore  PROJECT.md  SUMMARY.md  docker-compose.yml  setup_debezium.py
backend/: .gitignore  alembic.ini  data_populate.py  main.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 501d61522fb6_initial_migration.py  c47696bdb24e_add_created_at_to_comment.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ItemModal.tsx
frontend/src/hooks/: useComments.ts  useItems.ts
frontend/src/types/: index.ts
spark_scripts/: stream_to_data_lake.py
